# maci-crypto-rust

./: .gitignore  Cargo.toml  README.md
Example.xcframework/: Info.plist
Example.xcframework/ios-arm64/Example.framework/: Info.plist
Example.xcframework/ios-arm64/Example.framework/Headers/: exampleFFI.h
Example.xcframework/ios-arm64/Example.framework/Modules/: module.modulemap
Example.xcframework/ios-arm64_x86_64-simulator/Example.framework/Headers/: Export.h  exampleFFI.h
src/: crypto.rs  example.udl  lib.rs  maci-crypto-rust.h
