[package]
name = "maci-crypto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"], rev = "dbf79c5" }
sha3 = "0.10.8"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
dusk-poseidon = { version = "0.36.0", features = ["cipher"] }
dusk-jubjub = "0.14.0"